# archetype

./: Dockerfile  README.md  build.gradle  pyproject.toml  settings.gradle
