[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["xiawei918 <xiawei27149@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.0"
numpy = "1.19.0"
dataclasses = "^0.6"
matplotlib = "3.1.2"
pandas = "1.0.0"
jupyter = "*"
jupyterlab = "*"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
